
  - Support UNIX/Linux execution of build.xml Ant scripts.
  - Allow disabling all of a suite's test cases when using disable_tests.
  - mlunit_rerun allows replay of the most recent suite run (triggered
    by calling run_suite_collection or recursive_test_run). Replaying the
    latest fails and/or errors, allows you to concentrate on them,
    quickly fix them and verify your fix.

  - Fix: Tests skipped during set_up don't tell the call stack any more.
  - Fix: Proper encoding in jUnit reports. Always UTF-8.
  - Fix: When adding a directory to the MATLAB search path, that is
    a descendant of a mlunit_tempdir controlled directory, mlUnit does
    not trigger a MATLAB warning anymore.
  - Fix: Prevent double sprintf evaluation when using message arguments
    in assert_equals calls.


mlUnit 1.9.2 (2020-08-18)
-------------------------

  - Skipped tests don't tell the call stack any more.
  - assert_exist_file and assert_exist_dir may take an optional argument,
    specifying the expected exist return value.
  - assert_not_exist_file checks for absence of a file or directory.


mlUnit 1.9.1 (2020-05-13)
-------------------------

  - Fix: Handle bdclose exceptions that may occur when mlUnit closes
    a model during environment reset, but the model is in compile mode.


mlUnit 1.9.0 (2020-03-30)
-------------------------

  - You may statically disable tests by calling the disable_tests method
    on the result of load_tests_from_mfile. This supersedes the disable
    arguments to load_tests_from_mfile introduced in mlUnit 1.8.0.
  - Loading tests from MFiles works across all MATLAB versions by using
    load_tests_from_mfile. This deprecates output_tests_from_mfile.
  - mlUnit closes Simulink block diagrams opened by tests or set_up or
    tear_down fixtures.

  - Fix: Call MATLAB on paths containing spaces.
  - Fix: Handle suite_tear_down errors properly.
  - Fix: Restore Ant XML files to UTF-8 format, which was mangled before.


mlUnit 1.8.0 (2020-02-26)